--- a/certifications.html
+++ b/certifications.html
@@ -69,13 +69,13 @@ img:nth-child(4) {
   <!-- Navigation -->
   <div class="nav__menu" id="nav-menu" >
     <ul class="nav__list"style="padding-top: 15px;">
-   <a href="home.html" target="_blank">Home</a>&nbsp;&nbsp;&nbsp;
-    <a href="about.html" target="_blank">About</a>&nbsp;&nbsp;&nbsp;
-     <a href="education.html" target="_blank">Education</a>&nbsp;&nbsp;&nbsp;
-    <a href="skills.html" target="_blank">Skills</a>&nbsp;&nbsp;&nbsp;
-     <a href="work-experience.html" target="_blank">Work Experience</a>&nbsp;&nbsp;&nbsp;
-   <a href="projects.html" target="_blank">Projects</a>&nbsp;&nbsp;&nbsp;
-    <a href="certifications.html" target="_blank">Certifications</a>&nbsp;&nbsp;&nbsp;
+   <a href="home.html" target="_self">Home</a>&nbsp;&nbsp;&nbsp;
+    <a href="about.html" target="_self">About</a>&nbsp;&nbsp;&nbsp;
+     <a href="education.html" target="_self">Education</a>&nbsp;&nbsp;&nbsp;
+    <a href="skills.html" target="_self">Skills</a>&nbsp;&nbsp;&nbsp;
+     <a href="work-experience.html" target="_self">Work Experience</a>&nbsp;&nbsp;&nbsp;
+   <a href="projects.html" target="_self">Projects</a>&nbsp;&nbsp;&nbsp;
+    <a href="certifications.html" target="_self">Certifications</a>&nbsp;&nbsp;&nbsp;
      <a href="mailto:peddabharathmiriyala@gmail.com" class="nav_link">Contact</a>&nbsp;&nbsp;&nbsp;
     </ul>
 </div>
